add players as list of odjects and try insert random meme

--- a/html/player.html
+++ b/html/player.html
@@ -6,16 +6,19 @@
     <title>Document</title>
     <link href="../css/general.css" rel="stylesheet">
     <link href="../css/player.css" rel="stylesheet">
-    <link href="../js/player.js" rel="js">
+    <!--<link href="../js/player.js" rel="js">-->
 </head>
 <body>
     <h1>
         <div id="player1">player1-username Score: 0</div>
         <div id="player2">player2-username Score: 0</div>
     </h1>
-    <div id = "choosenImage"><img src=#></div>
+    <div id = "meme"><img src=#></div>
     <div>Give it your all!</div>
     <input id = "playerAnswer"></input> <br>
-    <button id = "submit">Submit Answer</button>
+    <submit id = "submit">Submit Answer</submit>
+
+    <script src="../js/player.js"></script>
+ 
 </body>
 </html>
