log in works sort of. missing break point and conditionals

--- a/html/index.html
+++ b/html/index.html
@@ -13,11 +13,11 @@
         <div id = "login">
             <h2>log in</h2>
             <label for="username">username</label>
-            <input type="text" name="username" id="username" maxlength="20" minlength="2" required onchange="handleSignChange()"><br><br><br>
+            <input type="text" name="username" id="username" maxlength="20" minlength="2" required onchange="handleLogChange()"><br><br><br>
 
             <label for="password">password</label>
-            <input type="text" name="password" id="password" maxlength="20" minlength="2" required onchange="handleSignChange()"><br><br><br>
-            <button onclick="onSignSubmit()">submit</button>
+            <input type="text" name="password" id="password" maxlength="20" minlength="2" required onchange="handleLogChange()"><br><br><br>
+            <button onclick="onLogSubmit()">submit</button>
         </div>
         <div id = "signup">
             <h2>sign up</h2>
