--- a/html/player.html
+++ b/html/player.html
@@ -18,6 +18,7 @@
     <input id = "playerAnswer"></input> <br>
     <submit id = "submit">Submit Answer</submit>
 
+    <script  src="../js/photos.js"></script>
     <script src="../js/player.js"></script>
  
 </body>
