--- a/html/index.html
+++ b/html/index.html
@@ -30,8 +30,8 @@
         </div>
     </div>
     <div class = "container c2">
-        <a href="#"><button>make it meme</button></a>
-        <a href='#''></a><button>road trip</button></a>
+        <a href="file:///home/adi-koifman/projects/project/our-project/html/choose-judge.html"><button>make it meme</button></a>
+        <a href='#'></a><button>road trip</button></a>
     </div>
     
     <aside id = "demo"></aside>
