--- a/html/index.html
+++ b/html/index.html
@@ -4,34 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/index.css">
     
 </head>
 <body>
     <header>fun games!</header>
     <div class = "container c1">
-        <div id = "login">
+        <div class = "enterType" id = "login">
             <h2>log in</h2>
-            <label for="username">username</label>
-            <input type="text" name="username" id="username" maxlength="20" minlength="2" required onchange="handleLogChange()"><br><br><br>
+            <label for="username">username</label><br>
+            <input type="text" name="username" id="username" maxlength="20" minlength="2" required onchange="handleLogChange()"><br><br>
 
-            <label for="password">password</label>
-            <input type="text" name="password" id="password" maxlength="20" minlength="2" required onchange="handleLogChange()"><br><br><br>
-            <button onclick="onLogSubmit()">submit</button>
+            <label for="password">password</label><br>
+            <input type="text" name="password" id="password" maxlength="20" minlength="2" required onchange="handleLogChange()"><br><br>
+            <button class="submit" onclick="onLogSubmit()">submit</button>
         </div>
-        <div id = "signup">
+        <div class = "enterType" id = "signup">
             <h2>sign up</h2>
-            <label for="username">username</label>
-            <input type="text" name="username" id="register-username" maxlength="20" minlength="2" required onchange="handleRegisterChange()"><br><br><br>
+            <label for="username">username</label><br>
+            <input type="text" name="username" id="register-username" maxlength="20" minlength="2" required onchange="handleRegisterChange()"><br><br>
 
-            <label for="password">password</label>
-            <input type="text" name="password" id="register-password" maxlength="20" minlength="2" required onchange="handleRegisterChange()"><br><br><br>
-            <button onclick="onRegisterSubmit()" id="RegisterSubmit">submit</button>
+            <label for="password">password</label><br>
+            <input type="text" name="password" id="register-password" maxlength="20" minlength="2" required onchange="handleRegisterChange()"><br><br>
+            <button class="submit" onclick="onRegisterSubmit()" id="RegisterSubmit">submit</button>
         </div>
     </div>
     <div class = "container c2">
-        <a href="#"><button>make it meme</button></a>
-        <a href='#''></a><button>road trip</button></a>
+        <a href="./choose-judge.html"><button>make it meme</button></a>
+        <a href='#'><button>road trip</button></a>
     </div>
     
     <aside id = "demo"></aside>
