add local storage and styling

--- a/html/choose-judge.html
+++ b/html/choose-judge.html
@@ -11,11 +11,13 @@
 <body>
     <h1>Choose you're judge!!!</h1>
     <div id = container>
-        <button class = "playerButton" id = "player1" >Player1 <!--Player1 username here--></button> 
+        <button class = "playerButton" id = "player1" onHover="changeOnHover">Player1 <!--Player1 username here--></button> 
         <button class = "playerButton" id = "player2" >Player2</button>
         <button class = "playerButton" id = "player3" >Player3</button>
     </div>
     <br>
     <a href="./player.html">Start Game</a>
+
+    <script src="../js/choose-judge.js"></script>
 </body>
 </html>
