local storage inclueds looged users

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
         <a href='#'></a><button>road trip</button></a>
     </div>
     
-    <aside id = "demo"></aside>
+    <aside id = "aside"></aside>
     <footer></footer>
     <script src="../js/index.js"></script>
 </body>
