--- a/html/player.html
+++ b/html/player.html
@@ -13,13 +13,13 @@
 <body>
 
     <h1>
-        <div id="player1">player1-username Score: 0</div>
-        <div id="player2">player2-username Score: 0</div>
+        <div class="player1">player1-username Score: 0</div>
+        <div class="player2">player2-username Score: 0</div>
     </h1>
-    <div id="imageContainer">hkuuhoi</div>
+    <div id="imageContainer" class=""></div>
     <div>"Give it your all!"</div>
-    <input id="playerAnswer"></input> <br>
-    <button id="submit">Submit Answer</button>
+    <input id="playerAnswer" onchange="handleInputPlayer()"><br>
+    <button onclick="onInputPlayerSubmit()" id="submit">Submit Answer</button>
 
     <script src="../js/photos.js"></script>
     <script src="../js/player.js"></script>
