milti looged on possible and styling

--- a/html/choose-judge.html
+++ b/html/choose-judge.html
@@ -9,15 +9,15 @@
 </head>
 
 <body>
-    <h1>Choose you're judge!!!</h1>
-    <div id = container>
+    <h1>Choose your judge!!!</h1>
+    <div id = playersContainer>
        
         <button class = "playerButton" id = "player1" >Player1 <!--Player1 username here--></button> 
     <div>
-        <button>rename</button>
+        <!--<button>rename</button>-->
         <button class = "playerButton" id = "player2" >Player2</button>
     </div>
-        <button id="rename3" onclick="renamePlayer(player3)">rename</button>
+        <!--<button id="rename3" onclick="renamePlayer(player3)">rename</button>-->
         <button class = "playerButton" id = "player3" >Player3</button>
     </div>
     <br>
