--- a/html/index.html
+++ b/html/index.html
@@ -31,8 +31,8 @@
         </div>
     </div>
     <div class = "container c2">
-        <a href="file:///home/adi-koifman/projects/project/our-project/html/choose-judge.html"><button>make it meme</button></a>
-        <a href='#'></a><button>road trip</button></a>
+        <a href="./choose-judge.html"><button>make it meme</button></a>
+        <a src='#'></a><button>road trip</button></a>
     </div>
     
     <aside id = "aside"></aside>
