--- a/html/player.html
+++ b/html/player.html
@@ -16,7 +16,7 @@
         <div class="player1">player1-username Score: 0</div>
         <div class="player2">player2-username Score: 0</div>
     </h1>
-    <div id="imageContainer" class=""></div>
+    <div id="imageContainer" class="imageContainer"></div>
     <div>"Give it your all!"</div>
     <input id="playerAnswer" onchange="handleInputPlayer()"><br>
     <button onclick="onInputPlayerSubmit()" id="submit">Submit Answer</button>
