--- a/html/player.html
+++ b/html/player.html
@@ -19,7 +19,7 @@
     <div id="imageContainer" class="imageContainer"></div>
     <div>"Give it your all!"</div>
     <input id="playerAnswer" onchange="handleInputPlayer()"><br>
-    <button onclick="onInputPlayerSubmit()" id="submit">Submit Answer</button>
+    <a href="#"><button onclick="onInputPlayerSubmit()" id="submit">Submit Answer</button></a>
 
     <script src="../js/photos.js"></script>
     <script src="../js/player.js"></script>
