--- a/html/judge.html
+++ b/html/judge.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="../css/general.css" rel="stylesheet">
+    <link href="../css/player.css" rel="stylesheet">
+    <link href="../css/judge.css" rel="stylesheet">
 </head>
 <body>
+    <h1>
+        <div class="player1">player1-username Score: 0</div>
+        <div class="player2">player2-username Score: 0</div>
+    </h1>
+    <div id="imageContainer" class="imageContainer"></div>
+    <div>"Give it your all!"</div>
+    <a href="player.html"><button id="submit">Submit Answer</button></a>
 
+    
+    <script src="../js/photos.js"></script>
+    <script src="../js/player.js"></script>
+    <script src="../js/judge.js"></script>
+    
 </body>
 </html>
