add player username

--- a/html/choose-judge.html
+++ b/html/choose-judge.html
@@ -10,14 +10,11 @@
 
 <body>
     <h1>Choose your judge!!!</h1>
-    <div id = playersContainer>
-       
-        <button class = "playerButton" id = "player1" >Player1 <!--Player1 username here--></button> 
+    <div id = playersContainer> 
+        <button class = "playerButton" id = "player1" >Player1</button> 
     <div>
-        <!--<button>rename</button>-->
         <button class = "playerButton" id = "player2" >Player2</button>
     </div>
-        <!--<button id="rename3" onclick="renamePlayer(player3)">rename</button>-->
         <button class = "playerButton" id = "player3" >Player3</button>
     </div>
     <br>
