--- a/html/judge.html
+++ b/html/judge.html
@@ -10,11 +10,12 @@
 </head>
 <body>
     <h1>
-        <div class="player1">player1-username Score: 0</div>
-        <div class="player2">player2-username Score: 0</div>
+        <div class="player1" onclick="score()">player1-username Score: 0</div>
+        <div class="player2" onclick="score()">player2-username Score: 0</div>
     </h1>
     <div id="imageContainer" class="imageContainer"></div>
-    <div>"Give it your all!"</div>
+    <div>"Choose!"</div>
+    <!--<input id="judgeScore"><br>-->
     <a href="player.html"><button id="submit">Submit Answer</button></a>
 
     
