--- a/html/choose-judge.html
+++ b/html/choose-judge.html
@@ -11,11 +11,11 @@
 <body>
     <h1>Choose your judge!!!</h1>
     <div id = playersContainer> 
-        <button class = "playerButton" id = "player1" >Player1</button> 
+        <a href="./player.html"><button class = "playerButton" id = "player1" >Player1</button></a>
     <div>
-        <button class = "playerButton" id = "player2" >Player2</button>
+        <a href="./player.html"><button class = "playerButton" id = "player2" >Player2</button></a>
     </div>
-        <button class = "playerButton" id = "player3" >Player3</button>
+    <a href="./player.html"><button class = "playerButton" id = "player3" >Player3</button></a>
     </div>
     <br>
     <a href="./player.html">Start Game</a>
