--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class = "container c2">
         <a href="./choose-judge.html"><button>make it meme</button></a>
-        <a src='#'></a><button>road trip</button></a>
+        <a href='./roadTripGame.html'><button>road trip</button></a>
     </div>
     
     <aside id = "aside">Players:<br></aside>
