playerMane on game

--- a/html/judge.html
+++ b/html/judge.html
@@ -12,8 +12,8 @@
 
 <body>
     <h1>
-        <div class="player1"><span>player1-username</span><span id="player1-score">Score: 0</span></div>
-        <div class="player2"><span>player2-username</span><span id="player2-score">Score: 0</span></div>
+        <div class="player1"><span id="player1">player1-username</span> <span id="player1-score"> Score: 0</span></div>
+        <div class="player2"><span id="player2">player2-username</span> <span id="player2-score"> Score: 0</span></div>
     </h1>
     <div id="imageContainer" class="imageContainer"></div>
     <!--<input id="judgeScore"><br>-->
