--- a/html/player.html
+++ b/html/player.html
@@ -12,8 +12,8 @@
 <body>
 
     <h1>
-        <div class="player1">player1-username Score: 0</div>
-        <div class="player2">player2-username Score: 0</div>
+        <div class="player1"><span id="player1">player1-username</span> Score: 0</div>
+        <div class="player2"><span id="player2">player2-username</span> Score: 0</div>
     </h1>
     <div id="imageContainer" class="imageContainer"></div>
     <div>"Give it your all!"</div>
