add show when judge is choosen

--- a/html/choose-judge.html
+++ b/html/choose-judge.html
@@ -17,6 +17,8 @@
     </div>
     <button class = "playerButton" id = "player3" >Player3</button>
     </div>
+    <p id="afterChooseText">You're judge has been choosen</p>
+    <p id="judgeUsername"></p>
     <br>
     <a href="./player.html" id = "startButton">Are you ready for it?</a>
 
